--- a/css/footer.css
+++ b/css/footer.css
@@ -1,7 +1,7 @@
 footer{
     position: relative;
     left: -10px;
-    top: 0vw;
+    bottom: 0vw;
     width: 110vw;
     right: -10px;
     background: linear-gradient(183.41deg, #67C3F3 -8.57%, #5A98F2 82.96%);
@@ -9,7 +9,15 @@ footer{
     display: flex;
     align-items: top;
     flex-direction: row;
-    justify-content: center
+    justify-content: center;
+}
+
+@media screen and (max-width: 1000px){
+    footer{
+        flex-direction: column;
+        align-items: center;
+        height: fit-content;
+    }
 }
 
 .footer__nav{
@@ -26,14 +34,14 @@ footer{
 
 .footer__a{
     font-weight: bold;
-	font-size: 1.25vw;
-	line-height: 3.81vw;
+	font-size: 1.25rem;
+	line-height: 3.81rem;
     color:white;
 }
 
 .footer__img{
-    margin-right: 30vw;
-    height: 2.5vw;
+    margin-right: 30rem;
+    height: 2.5rem;
 }
 
 .footer__links{
