--- a/css/hero.css
+++ b/css/hero.css
@@ -13,10 +13,25 @@
     height: 37.3vw;
 }
 
+@media screen and (min-width: 1000px){
 .hero__article{
     width: 28vw;
     left: 12.5vw;
     top: 9.5vw;
+}
+}
+
+@media screen and (max-width: 1000px){
+    .hero__article{
+        width: 70vw;
+        left: 12.5vw;
+        top: 9.5vw;
+        margin-bottom: 10vw;
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
 }
 
 .hero__button{
