--- a/css/menu.css
+++ b/css/menu.css
@@ -1,4 +1,4 @@
-@media(max-width: 700px){
+@media screen and (max-width: 700px){
 #menuToggle
  {
    display: block;
@@ -22,7 +22,7 @@
  
  #menuToggle a:hover
  {
-   color: tomato;
+   color: rgb(255, 255, 255);
  }
  
  
@@ -111,12 +111,13 @@
  #menu
  {
    position: absolute;
-   width: 300px;
+   width: 100vw;
+   height: 100vh;
    margin: -100px 0 0 -50px;
    padding: 50px;
    padding-top: 125px;
    
-   background: #ededed;
+   background: #a08bff;
    list-style-type: none;
    -webkit-font-smoothing: antialiased;
    /* to stop flickering of text in safari */
